2013-01-16  Siddhesh Poyarekar  <siddhesh@redhat.com>

        * sysdeps/ieee754/dbl-64/atnat.h: Remove constant value
        definitions.
        * sysdeps/ieee754/dbl-64/atnat2.h: Likewise.
        * sysdeps/ieee754/dbl-64/mpa.c: Do not include mpa2.h.
        * sysdeps/ieee754/dbl-64/mpa.h: Move all constant value
        definitions here.
        * sysdeps/ieee754/dbl-64/mpa2.h: Remove.
        * sysdeps/ieee754/dbl-64/mpatan.h: Remove constant value
        definitions.
        * sysdeps/ieee754/dbl-64/mpatan2.c (__mpatan2): Remove ZERO
        and ONE.
        * sysdeps/ieee754/dbl-64/mpexp.c: Do not include mpexp.h.
        * sysdeps/ieee754/dbl-64/mpexp.h: Remove.
        * sysdeps/ieee754/dbl-64/mpsqrt.h: Remove constant value
        definitions.
        * sysdeps/ieee754/dbl-64/mptan.c (__mptan): Remove MONE.
        * sysdeps/ieee754/dbl-64/ulog.h: Remove constant value
        definitions.
        * sysdeps/ieee754/dbl-64/utan.h: Likewise.

	* sysdeps/ieee754/dbl-64/mpa2.h: Fix the value of TWO.

2013-01-15  David S. Miller  <davem@davemloft.net>

	* sysdeps/sparc/sparc32/sparcv9/fpu/multiarch/Makefile: Add vis3
	trunc{,f} to libm-sysdep_routes.
	* sysdeps/sparc/sparc64/fpu/multiarch/Makefile: Likewise.
	* sysdeps/sparc/sparc32/sparcv9/fpu/multiarch/s_trunc-vis3.S: New
	file.
	* sysdeps/sparc/sparc32/sparcv9/fpu/multiarch/s_trunc.S: New file.
	* sysdeps/sparc/sparc32/sparcv9/fpu/multiarch/s_truncf-vis3.S: New
	file.
	* sysdeps/sparc/sparc32/sparcv9/fpu/multiarch/s_truncf.S: New
	file.
	* sysdeps/sparc/sparc32/sparcv9/fpu/s_trunc.S: New file.
	* sysdeps/sparc/sparc32/sparcv9/fpu/s_truncf.S: New file.
	* sysdeps/sparc/sparc64/fpu/multiarch/s_trunc-vis3.S: New file.
	* sysdeps/sparc/sparc64/fpu/multiarch/s_trunc.S: New file.
	* sysdeps/sparc/sparc64/fpu/multiarch/s_truncf-vis3.S: New file.
	* sysdeps/sparc/sparc64/fpu/multiarch/s_truncf.S: New file.
	* sysdeps/sparc/sparc64/fpu/s_trunc.S: New file.
	* sysdeps/sparc/sparc64/fpu/s_truncf.S: New file.
