@@ -9,7 +9,8 @@ Version 2.18
 
 * The following bugs are resolved with this release:
 
-  13951, 14200, 14317, 14964, 14981, 14982, 14985, 14994, 14996, 15003.
+  13951, 14200, 14317, 14327, 14964, 14981, 14982, 14985, 14994, 14996,
+  15003.
 
 
 Version 2.17
